Safari is not able to hear audio when using WebRTC in multiple tabs https://bugs.webkit.org/show_bug.cgi?id=215270 <rdar://problem/66736746>

Reviewed by Eric Carlson.

Covered by manually testing that audio continues when two pages in the same process create a peer connection,
one plays audio with WebRTC and the second one is closed.
Before the patch, the closing page would stop the audio device module, even though the first page would like the module to continue playing.
Fix this by creating an audio module per page instead of process wide.

* platform/mediastream/libwebrtc/LibWebRTCAudioModule.h:
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::initializePeerConnectionFactoryAndThreads):
(WebCore::LibWebRTCProvider::factory):
(WebCore::LibWebRTCProvider::createPeerConnectionFactory):
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:


Canonical link: https://commits.webkit.org/228859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266454 268f45cc-cd09-0410-ab3c-d52691b4dbfc